// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add EditorConfig 1`] = `
Object {
  "/.editorconfig": "# editorconfig.org
root = true

[*]
indent_style = tab
end_of_line = lf
charset = utf-8
trim_trailing_whitespace = true
insert_final_newline = true

[*.{json,yml,md,babelrc,remarkrc,prettierrc}]
indent_style = space
indent_size = 2
",
}
`;

exports[`should add a single section when indent=2 1`] = `
Object {
  "/.editorconfig": "# editorconfig.org
root = true

[*]
indent_style = space
indent_size = 2
end_of_line = lf
charset = utf-8
trim_trailing_whitespace = true
insert_final_newline = true
",
}
`;

exports[`should update JSON section 1`] = `
Object {
  "/.editorconfig": "# editorconfig.org
root = true

[*]
indent_style = tab
end_of_line = lf
charset = utf-8
trim_trailing_whitespace = true
insert_final_newline = true

[*.{json,yml,md,babelrc,remarkrc,prettierrc}]
indent_style = space
indent_size = 2",
}
`;
